--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,20 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-:root{
-    --cor01:#f2d541;
-    --cor01A:#f2d541c0;
-    --cor02:#d92353;
-    --cor02A:#d92353a1;
-    --cor03:#60b6bf;
-    --cor03A:#60b6bf9d;
-    --cor04:#1d803a;
-    --cor04A:#1d803b6c;
-    --corBaseEscura:#212529;
-    --corBaseEscura2:#31373d;
-    --corBaseClara:#788a9c;
-    --corTexto:#d4d4d4;
+:root {
+    --cor01: #f2d541;
+    --cor01A: #f2d541c0;
+    --cor02: #d92353;
+    --cor02A: #d92353a1;
+    --cor03: #60b6bf;
+    --cor03A: #60b6bf9d;
+    --cor04: #1d803a;
+    --cor04A: #1d803b6c;
+    --corBaseEscura: #212529;
+    --corBaseEscura2: #31373d;
+    --corBaseClara: #788a9c;
+    --corTexto: #d4d4d4;
 }
 
 * {
@@ -22,7 +22,7 @@
     padding: 0;
     box-sizing: border-box;
     color: var(--corTexto);
-    font-family: 'Raleway', sans-serif;
+    font-family: "Raleway", sans-serif;
 }
 
 body {
@@ -38,43 +38,120 @@ main {
     box-shadow: 0px 0px 8px black;
 }
 
-form {
+.create-task-btn {
     display: flex;
-    gap: 15px;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
     width: 100%;
-    margin-bottom: 50px;
+
+    padding: 5px 10px;
+
+    background: none;
+    border: 1px solid var(--corBaseClara);
+    border-radius: 5px;
+
+    cursor: pointer;
 }
 
-.add-input {
+.create-task-btn:hover {
+    background-color: var(--corBaseClara);
+    transition: background-color 0.3s, border 0s;
+}
+
+.blur {
+    display: none;
+    justify-content: center;
+    align-items: center;
+
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+
+    width: 100vw;
+    height: 100vh;
+
+    backdrop-filter: blur(5px);
+}
+
+.form-task {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+
+    width: 80%;
+
+    padding: 10px;
+
+    background-color: var(--corBaseEscura);
+    border: 2px solid var(--corBaseClara);
+    border-radius: 5px;
+
+    z-index: 1;
+}
+
+.form-task > div {
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    align-items: center;
+
     width: 100%;
-    flex: 1;
-    padding: 15px;
+
+    cursor: pointer;
+}
+
+.form-task input {
+    width: 100%;
+
+    padding: 10px;
+
     background-color: var(--corBaseEscura);
     border: 1px solid var(--corBaseClara);
-    color: var(--corTexto);
     border-radius: 5px;
-    outline: none;
+
+    color: var(--corTexto);
     font-size: 1rem;
     font-weight: 600;
+
+    outline: none;
 }
 
-.add-input::placeholder {
+.form-task input::placeholder {
     color: var(--corTexto);
 }
 
-.add-btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 50px;
-    height: 50px;
+.form-task hr {
+    width: 100%;
+
+    margin: 10px 0px;
+
+    border: 1px solid transparent;
+    
+}
+
+.form-task button {
+    width: 100%;
+    
+    padding: 10px;
+
+    background-color: var(--corBaseEscura);
     border: 1px solid var(--corBaseClara);
     border-radius: 5px;
-    background-color: var(--corBaseEscura);
+
     color: var(--corTexto);
-    font-size: 1.7rem;
+    font-size: 1rem;
     font-weight: 500;
+
     cursor: pointer;
+}
+
+.form-task button:hover {
+    background-color: var(--corBaseClara);
+    transition: background-color 0.3s ease-in-out;
 }
 
 table {
@@ -82,11 +159,12 @@ table {
     width: 100%;
 }
 
-td, th {
+td,
+th {
     border: 1px solid var(--corBaseClara);
     padding: 10px;
     text-align: center;
-    font-size: 0.90rem;
+    font-size: 0.9rem;
 }
 
 td {
@@ -94,21 +172,6 @@ td {
 }
 
 tr:nth-child(even) {
-    background-color: var(--corBaseEscura2);
-}
-
-select {
-    padding: 10px;
-    width: 100%;
-    background-color: var(--corBaseEscura);
-    border: 1px solid var(--corBaseClara);
-    border-radius: 8px;
-    font-weight: 600;
-    text-transform: capitalize;
-    outline: none;
-}
-
-select:hover {
     background-color: var(--corBaseEscura2);
 }
 
@@ -126,4 +189,44 @@ select:hover {
 
 .action-btn span {
     color: var(--cor02);
+}
+
+.confirm-delete {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+
+    padding: 30px ;
+
+    background-color: var(--corBaseEscura);
+    border: 2px solid var(--corBaseClara);
+    border-radius: 5px;
+
+    z-index: 1;
+}
+
+.confirm-delete span { 
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+
+.confirm-delete button {
+    margin: 0px 5px;
+    padding: 5px;
+
+    background-color: var(--corBaseEscura);
+    border: 2px solid var(--corBaseClara);
+    border-radius: 5px;
+
+    color: var(--corTexto);
+    font-size: 1rem;
+    font-weight: 500;
+
+    cursor: pointer;
+}
+
+.confirm-delete button:hover {
+    background-color: var(--corBaseClara);
+    transition: background-color 0.1s ease-in-out;
 }
